@@ -1,5 +1,6 @@
 Makefile
 Makefile.in
+remove-potcdate.sed
 Rules-quot
 boldquot.sed
 de.gmo
